tests/ui/parser/raw/raw-string.rs
fn main() {
    let x = r##"lol"#;
    //~^ ERROR unterminated raw string
}

// ferrocene-annotations: fls_usr6iuwpwqqh
// Raw String Literals
